--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "rust"]
 	path = rust
 	url = git@github.com:Qubi0-0/learning-rust.git
+[submodule "javascript"]
+	path = javascript
+	url = git git@github.com:Qubi0-0/js-learn.git
